Fix misaligned icon bug with overscroll-y

--- a/src/components/events/EventCard/style.module.scss
+++ b/src/components/events/EventCard/style.module.scss
@@ -4,7 +4,6 @@
   border-radius: 10px;
   -ms-overflow-style: none;
   overflow-x: hidden;
-  overflow-y: scroll;
   padding: 0;
   position: relative;
   scrollbar-width: none;
